--- a/config.json
+++ b/config.json
@@ -5,5 +5,7 @@
     "my_ip": "www.code.com",
     "my_port": 80,
     "user_name": "yikeshu",
-    "password": "12345678"
+    "password": "12345678",
+
+    "log_file": "/var/log/crossnet_client.log"
 }
