compile in ubuntu ok

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@ tags
 cscope.*out
 *.swp
 .exrc
+*.o
+.deps/
+Makefile
+aclocal.m4
+autom4te.cache/
+compile
+config.h
+config.h.in
+config.h.in~
+config.log
+config.status
+crossnet_client
+depcomp
+install-sh
+Makefile.in
+missing
+configure
